src/objects/Person_Being_Referred__c.object
<CustomObject>
    <description>Person Being Referred holds demographic information about a person for the referral process</description>
    <fields>
        <fullName>Additional_Information_Comments__c</fullName>
        <label>Additional Information / Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <description>Age (will be overwritten by a trigger if Date of Birth is filled in)</description>
        <inlineHelpText>If Date of Birth is filled in, then Age is overwritten with the calculated value.</inlineHelpText>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_days__c</fullName>
        <label>Age_days</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Age_month__c</fullName>
        <label>Age_month</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Age_year__c</fullName>
        <inlineHelpText>If Date of Birth is filled in, then Age is overwritten with the calculated value.</inlineHelpText>
        <label>Age_year</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <description>Date of Birth - if this is filled in, then Age is overwritten based on this date.</description>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <picklist>
            <picklistValues>
                <fullName>Aboriginal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>African</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balkan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baltic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Isles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech and Slovak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East and Southeast Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern European</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>European</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indo-Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin, Central, South American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maghrebi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern European</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oceania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other European</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scandinavian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern European</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western European</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>First_Name_SoundEx_Key__c</fullName>
        <label>First Name SoundEx Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>if(ISNULL(Middle_Initial__c ),
First_Name__c &amp; &quot; &quot; &amp;  Last_Name__c,
First_Name__c &amp; &quot; &quot; &amp;   Middle_Initial__c &amp; &quot; &quot; &amp; Last_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Home_County__c</fullName>
        <label>Home County</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name_SoundEx_Key__c</fullName>
        <label>Last Name SoundEx Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Guardianship_Status__c</fullName>
        <label>Legal/Guardianship Status</label>
        <picklist>
            <picklistValues>
                <fullName>Self</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guardian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Care Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conservator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civil Committment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_of_Education__c</fullName>
        <label>Highest Level of Education</label>
        <picklist>
            <picklistValues>
                <fullName>1 Year Preschool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2+ Years Preschool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kindergarten</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Year College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Years College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Years College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4+ Years College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Year Vocational/Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Years Vocational/Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elementary School Special Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle School Special Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High School Special Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Year Special Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2+ Years Special Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Secondary Transition Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divorced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Middle_Initial__c</fullName>
        <label>Middle Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Verbal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Non-Verbal and Sign-Language designations can be used in combination with the Primary Language selection.</inlineHelpText>
        <label>Non-Verbal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Person_Being_Served__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person Being Served</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>People Being Referred</relationshipLabel>
        <relationshipName>People_Being_Referred</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Language__c</fullName>
        <label>Primary Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English creoles- Belize, Guyanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jamaican Creole</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French Creole</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haitian Creole</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cajun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albanian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bielorussian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austrian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swiss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swedish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norwegian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Icelandic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Romanian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ukrainian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croatian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Serbian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenian</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <label>Race</label>
        <picklist>
            <picklistValues>
                <fullName>Caucasian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>African American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Indian/Alaskan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian/Pacific Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hispanic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle Eastern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-Racial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <label>SSN</label>
        <length>11</length>
        <maskChar>asterisk</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Sign_Language__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Non-Verbal and Sign-Language designations can be used in combination with the Primary Language selection.</inlineHelpText>
        <label>Sign Language</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street_1__c</fullName>
        <label>Street 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_2__c</fullName>
        <label>Street 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Person Being Referred</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PBR-{0}</displayFormat>
        <label>PBR Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>People Being Referred</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Referral_Assignment__c</fullName>
        <label>Referral Assignment</label>
    </sharingReasons>
    <validationRules>
        <fullName>No_Date_of_Birth_In_the_Future</fullName>
        <active>true</active>
        <errorConditionFormula>Date_of_Birth__c &gt; TODAY()</errorConditionFormula>
        <errorDisplayField>Date_of_Birth__c</errorDisplayField>
        <errorMessage>Date of Birth cannot be in the future.</errorMessage>
    </validationRules>
</CustomObject>